# Maverick

./: Cargo.toml  README.es.md  README.md
src/: config.rs  log.rs  main.rs  types.rs
src/backend/: atoms.rs  bar.rs  mod.rs  x11.rs
src/core/: commands.rs  engine.rs  events.rs  layout.rs  mod.rs  tests.rs
